examples/Passing/Variables/reuse.c
int main() {
    int a;
    int b;
    a = 5;
    b = 5;
    a = b + a + 5;
    b = a * 2 + b;
    return a + b;
}
