examples/Failing/Variables/fail_add3.c
int main() {
    a += 5;
    int a = 5;
    return a;
}
